prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "authorization, origin, content-type, accept"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - http:
        paths:
          ################
          # URL ROUTING #
          ################
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: django-cluster-ip-service
                port:
                  number: 8000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: django-cluster-ip-service
                port:
                  number: 8000
          ##########################
          # STATIC FOLDER ROUTING #
          ##########################
          - path: /static/admin/
            pathType: Prefix
            backend:
              service:
                name: static-assets-cluster-ip-service
                port:
                  number: 8000
          - path: /static/rest_framework/
            pathType: Prefix
            backend:
              service:
                name: static-assets-cluster-ip-service
                port:
                  number: 8000
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: react-cluster-ip-service
                port:
                  number: 3000
          - path: /media/
            pathType: Prefix
            backend:
              service:
                name: react-cluster-ip-service
                port:
                  number: 3000
          ################
          # URL ROUTING #
          ################
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-cluster-ip-service
                port:
                  number: 3000
